changes in submit butto

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <label for="password">Password:</label><br>
             <input type="password" id="password" name="password" value=""><br><br>
            
-           <a href="patient.html" ><input type="submit" value="Submit">Submit</a>
+            <button type="submit"><a href="patient.html">Submit</a></button>
 
         </form>
        
